CSS/index.css
/* 

UX Designer gave us sizes in pt,

conversion via internet is 1px = .75pt

currently 62.5% of 16px is 10 px, giving us 1.6 rem for 16 px, but we want

16px * .75 = point
*/
/* 
#FFD1D1
#6819DF
#FFD940
*/
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
* {
  box-sizing: border-box;
}
html {
  font-size: 62.5%;
  height: 100%;
}
body {
  background-color: #00668D;
  font-family: "Roboto";
  font-weight: Regular;
  font-size: 1.6rem;
  color: #FFFFFF;
  height: 100%;
  margin: 0 auto;
}
h1 {
  font-family: "Roboto";
  font-weight: bold;
  font-size: 6rem;
}
h2 {
  font-family: "Roboto";
  font-weight: bold;
  font-size: 4rem;
}
h3 {
  font-family: "Roboto";
  font-weight: Medium;
  font-size: 2.4rem;
}
p {
  line-height: 1.4;
  font-size: 4rem;
}
main {
  max-width: 800px;
  width: 100%;
  margin: 0 auto;
}
button {
  font-family: "Roboto";
  font-weight: Regular;
  font-size: 2rem;
}
header {
  color: #FFFFFF;
  display: flex;
  justify-content: space-between;
  padding: 1rem;
  background: #00668D;
}
header div {
  display: flex;
  align-items: center;
}
header div img {
  width: 13%;
  height: auto;
  margin: 0% 5%;
}
header nav {
  display: flex;
  justify-content: space-around;
  align-items: flex-end;
  width: 40%;
  margin-right: 4%;
}
header nav a {
  color: #FFFFFF;
  border: 1;
  text-decoration: none;
  font-size: 2.4rem;
  padding: 0.5rem;
}
header nav a:hover {
  color: #E0F9FF;
}
@media screen and (max-width:500px) {
  header {
    display: flex;
    flex-flow: column wrap;
  }
  header nav {
    flex-flow: column wrap;
    justify-content: center;
    align-items: center;
  }
  header nav a {
    font-size: 2.5rem;
    border-bottom: 0.5rem solid white;
  }
}
body.index {
  background-image: url("images/dogBackground.jpg");
  /* Full height */
  height: 100%;
  /* Center and scale the image nicely */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
main.contact {
  font-size: 3rem;
  font-family: "Roboto";
  font-weight: Regular;
}
main.contact a {
  text-decoration: none;
  color: #FFFFFF;
}
main.contact a:hover {
  color: lightblue;
}
@media screen and (max-width:800px) {
  main.contact {
    padding: 5%;
  }
}
main.contact label {
  font-size: 3rem;
  padding: 1%;
}
main.contact textarea {
  font-size: 2rem;
}
main.contact input {
  font-size: 2rem;
}
main.contact section {
  line-height: 2;
}
.meetTeam {
  color: black;
  display: flex;
  flex-flow: row wrap;
}
.meetTeam .teamRole {
  display: none;
}
.meetTeam section {
  width: 20%;
  height: 20%;
  position: relative;
  text-align: center;
  color: white;
  border: none;
  margin: 2%;
}
.meetTeam section .modal-header .modal-body {
  display: flex;
  justify-content: center;
  align-items: center;
}
.meetTeam section img {
  width: 100%;
  height: auto;
}
.meetTeam section img:hover {
  background-color: #000;
  opacity: 0.5;
}
@media screen and (max-width:800px) {
  .meetTeam {
    color: #FFFFFF;
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: center;
  }
  .meetTeam section {
    width: 30%;
    height: 30%;
    align-self: flex-start;
  }
  .meetTeam section .teamRole {
    display: block;
    padding: 2%;
  }
  .meetTeam section img {
    border-radius: 5%;
  }
}
@media screen and (max-width:500px) {
  .meetTeam {
    color: #FFFFFF;
    display: flex;
    flex-flow: column wrap;
    justify-content: center;
    align-items: center;
  }
  .meetTeam .teamRole {
    display: block;
    padding: 1%;
  }
  .meetTeam section {
    width: 50%;
    height: 50%;
    align-self: center;
  }
}

